mobile menu added

--- a/archex/index.html
+++ b/archex/index.html
@@ -39,10 +39,28 @@
 					<li class="header__nav_elem"><a href="#">Services</a></li>
 					<li class="header__nav_elem"><a href="#">Blog</a></li>
 					<li class="header__nav_elem"><a href="#">Contacts</a></li>
-				</ul>	
+				</ul>
 			</div>
+
+
 	</div>
 	</div>
+
+
+	<!-- drop-down menu for mobile devices -->
+			<select class="header__mob_nav_menu">
+				<option value="#">Home</option>
+				<option value="www.google.com"><a href="#">About</option>
+					<option value="#">--testiomonials</option>
+					<option value="#">--archives</option>
+					<option value="#">--faqs</option>
+				<option value="#">Folio</option>
+				<option value="#">Services</option>
+				<option value="#">Blog</option>
+				<option value="#">Contacts</option>
+			</select>
+
+
 
 
 	<div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -68,14 +86,14 @@
 				</div>
 			</div>
 
-			<!-- <div class="item">
+			<div class="item">
 				<div class="carousel__imgcontainer carousel__imgcontainer-bgrd2" style="width:100%;">
 					<div class="container carousel__textContainer">
-						<div class="row">
-							<h1 class="carousel__h1 col-sm-12">Ideal</h1>
-							<h3 class="carousel__h3 col-sm-12">architecture solutions for future generations.</h3>
-							<a class="carousel__learnMore col-sm-12" href="#">Learn more</a>
-						</div>
+					<div class="row">
+							<h1 class="carousel__h1 col-xs-12">Ideal</h1>
+							<h3 class="carousel__h3 col-xs-12">architecture solutions for future generations.</h3>
+							<a class="carousel__learnMore col-xs-12" href="#">Learn more</a>
+					</div>
 					</div>
 				</div>
 			</div>
@@ -83,14 +101,15 @@
 			<div class="item">
 				<div class="carousel__imgcontainer carousel__imgcontainer-bgrd3" style="width:100%;">
 					<div class="container carousel__textContainer">
-						<div class="row">
-							<h1 class="carousel__h1 col-sm-12">MODERN</h1>
-							<h3 class="carousel__h3 col-sm-12">&amp unique designs of any complexity</h3>
-							<a class="carousel__learnMore col-sm-12" href="#">Learn more</a>
-						</div>
+					<div class="row">
+							<h1 class="carousel__h1 col-xs-12">Modern</h1>
+							<h3 class="carousel__h3 col-xs-12">&amp unique designs of any complexity</h3>
+							<a class="carousel__learnMore col-xs-12" href="#">Learn more</a>
 					</div>
-				</div> -->
+					</div>
+				</div>
 			</div>
+		</div>
 
 
 		<!-- Left and right controls -->
