new mobile menu

--- a/archex/index.html
+++ b/archex/index.html
@@ -16,8 +16,8 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 
 	<!-- CSS and JS -->
-	<link rel="stylesheet" href="css/main.css">
 	<script src="js/libs.min.js"></script>
+	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -26,13 +26,14 @@
 	<div class="container header__container">
 			<div class="row">
 				<h2 class="header__logo" id="header__logo"><a href="#">Archex</a></h2>
+				<a class="header__mobile_menu"></a>
 				<ul class="header__nav_menu">
 					<li class="header__nav_elem header__nav_elem-active"><a href="#">Home</a></li>
 					<li class="header__nav_elem"><a href="#">About</a>
 						<ul class="header__submenu">
-							<li class="header__nav_subelem"><a href="#">testiomonials</a></li>
-							<li class="header__nav_subelem"><a href="#">archives</a></li>
-							<li class="header__nav_subelem"><a href="#">faqs</a></li>
+							<li class="header__nav_subelem"><a href="#">- testiomonials</a></li>
+							<li class="header__nav_subelem"><a href="#">- archives</a></li>
+							<li class="header__nav_subelem"><a href="#">- faqs</a></li>
 						</ul>
 					</li>
 					<li class="header__nav_elem"><a href="#">Folio</a></li>
@@ -41,24 +42,25 @@
 					<li class="header__nav_elem"><a href="#">Contacts</a></li>
 				</ul>
 			</div>
-
-
 	</div>
 	</div>
 
 
-	<!-- drop-down menu for mobile devices -->
-			<select class="header__mob_nav_menu">
-				<option value="#">Home</option>
-				<option value="www.google.com"><a href="#">About</option>
-					<option value="#">--testiomonials</option>
-					<option value="#">--archives</option>
-					<option value="#">--faqs</option>
-				<option value="#">Folio</option>
-				<option value="#">Services</option>
-				<option value="#">Blog</option>
-				<option value="#">Contacts</option>
-			</select>
+	<!--menu for mobile devices -->
+<!-- 	<ul class="header__nav_menu">
+		<li class="header__nav_elem header__nav_elem-active"><a href="#">Home</a></li>
+		<li class="header__nav_elem"><a href="#">About</a>
+			<ul class="header__submenu">
+				<li class="header__nav_subelem"><a href="#">testiomonials</a></li>
+				<li class="header__nav_subelem"><a href="#">archives</a></li>
+				<li class="header__nav_subelem"><a href="#">faqs</a></li>
+			</ul>
+		</li>
+		<li class="header__nav_elem"><a href="#">Folio</a></li>
+		<li class="header__nav_elem"><a href="#">Services</a></li>
+		<li class="header__nav_elem"><a href="#">Blog</a></li>
+		<li class="header__nav_elem"><a href="#">Contacts</a></li>
+	</ul> -->
 
 
 
