some responsive added

--- a/archex/index.html
+++ b/archex/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -87,7 +87,7 @@
 					<div class="container carousel__textContainer">
 					<div class="row">
 							<h1 class="carousel__h1 col-xs-12">Modern</h1>
-							<h3 class="carousel__h3 col-xs-12">&amp unique designs of any complexity</h3>
+							<h3 class="carousel__h3 col-xs-12">&amp; unique designs of any complexity</h3>
 							<a class="carousel__learnMore col-xs-12" href="#">Learn more</a>
 					</div>
 					</div>
@@ -111,7 +111,7 @@
 	<!-- Go to top button -->
 	<button onclick="topFunction()" id="totopBtn" title="Go to top"></button>
 	<!-- Contact us button -->
-	<button onclcik="contactusFunction()" id="contactBtn" title="Contact us">Contact us!</button>
+	<button onclick="contactusFunction()" id="contactBtn" title="Contact us">Contact us!</button>
 	<!-- Contact us form -->
 	<form action="#" class="contactForm">
 		<div class="contactForm__header">
