first mobile menu added

--- a/mercore/index.html
+++ b/mercore/index.html
@@ -37,6 +37,7 @@
 					<li><a href="#" class="mainMenu__link">Blog</a></li>
 					<li><a href="#" class="mainMenu__link">Contact</a></li>
 				</ul>
+				<a class="mainMenu__mobile-menu"></a>
 				<p class="search">
 					<input type="search" name="search" class="search__box">
 					<input type="submit" value="s" class="search__btn">
