--- a/mercore/index.html
+++ b/mercore/index.html
@@ -75,9 +75,10 @@
 		<div class="catMenu-wrapper">
 			<div class="container">
 			<div class="row">
-				<ul class="catMenu">
+				<a class="catMenu__mobile-menu col-sm-12"></a>
+				<ul class="catMenu col-sm-12">
 					<li class="catMenu__elem"><a href="#">Indoor cameras</a></li>
-					<li class="catMenu__elem"><a href="#">Outdoor cameras&#9661;</a>
+					<li class="catMenu__elem"><a>Outdoor cameras&#9661;</a>
 						<ul class="catMenu__subMenu">
 							<li class="catMenu__subElem"><a href="#">Bullet Cameras</a></li>
 							<li class="catMenu__subElem"><a href="#">Simulated Cameras</a></li>
@@ -89,6 +90,7 @@
 					<li class="catMenu__elem"><a href="#">Motion sensors</a></li>
 					<li class="catMenu__elem"><a href="#">Motion lights</a></li>
 				</ul>
+				
 			</div>
 			</div>
 		</div>
@@ -211,7 +213,9 @@
 	</div>
 
 	<!-- hided background for parallax effect -->
-	<div class="parallaxBgrd"></div> 
+	<div class="container">
+		<div class="parallaxBgrd"></div>
+	</div>
 
 	<!-- Latest News -->
 	<div class="latestNews-wrapper">
@@ -289,8 +293,8 @@
 			<h4 class="info__header">Store information</h4>
 			<ul class="info__list">
 				<li><i class="icon-location info__icon"></i> 4578 Marmora Road, Glasgow D04 89GR</li>
-				<li><a href="" class="info__link"><i class="icon-location info__icon"></i> 0123-456-789</a></li>
-				<li><a href="" class="info__link"><i class="icon-location info__icon"></i> info@demolink.org</a></li>
+				<li><a href="" class="info__link"><i class="icon-phone-squared info__icon"></i> 0123-456-789</a></li>
+				<li><a href="" class="info__link"><i class="icon-mail info__icon"></i> info@demolink.org</a></li>
 			</ul>
 		</div>
 	</div>
