--- a/archex/index.html
+++ b/archex/index.html
@@ -22,6 +22,13 @@
 
 <body>
 
+	<!-- preloader -->
+	<div id="loadScreen">
+		<div class="outer"></div>
+		<div class="inner"></div>
+	</div>
+
+	<!-- navbar -->
 	<div class="header-wrapper navbar-fixed-top">
 	<div class="container header__container">
 			<div class="row">
