mobile preloader fixed

--- a/archex/index.html
+++ b/archex/index.html
@@ -24,8 +24,7 @@
 
 	<!-- preloader -->
 	<div id="loadScreen">
-		<div class="outer"></div>
-		<div class="inner"></div>
+		<div class="loading"></div>
 	</div>
 
 	<!-- navbar -->
